<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:orientation="vertical"
                                             android:background="@android:color/transparent"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
        android:id="@+id/Name_Player_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Game_top_content_player_text"
        android:text="@string/top_content_text_cross"
        app:layout_constraintLeft_toLeftOf="@+id/krestiki_label"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/Score_Player_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Game_top_content_score_text"
        android:text="@string/zero_score"
        app:layout_constraintLeft_toLeftOf="@+id/Name_Player_1"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/Name_Player_1"/>

    <TextView
        android:id="@+id/Name_Player_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Game_top_content_player_text"
        android:text="@string/top_content_noughts"
        android:layout_marginTop="36dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/Score_Player_2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        style="@style/Game_top_content_score_text"
        android:text="@string/zero_score"
        app:layout_constraintRight_toRightOf="@+id/Name_Player_2"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/Name_Player_2"/>
</androidx.constraintlayout.widget.ConstraintLayout>