<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:orientation="vertical"
                                             android:background="@android:color/transparent"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
        android:id="@+id/Name_Player_1"
        style="@style/Game_top_content_player_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/tutorial_player_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/Score_Player_1"
        style="@style/Game_top_content_score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/zero_score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/Name_Player_1"
        app:layout_constraintTop_toBottomOf="@+id/Name_Player_1"/>

    <TextView
        android:id="@+id/Name_Player_2"
        style="@style/Game_top_content_player_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/tutorial_enemy_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/Score_Player_2"
        style="@style/Game_top_content_score_text"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/zero_score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/Name_Player_2"
        app:layout_constraintTop_toBottomOf="@+id/Name_Player_2"/>
</androidx.constraintlayout.widget.ConstraintLayout>